# pytradfri

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  DockerfileRPI  DockerfileRPIW  DockerfileRPIW-installed  LICENSE  MANIFEST.in  README.md  example.py  example_async.py  example_color.py  example_pair.py  example_sync.py  mypy.ini  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: dependabot.yml  release-drafter.yml
docs/: issue_template.md
examples/: debug_info.py  example_air_purifier_async.py  example_async.py  example_blinds.py  example_color.py  example_cover_async.py  example_jsonlist.py  example_pair.py  example_socket_async.py  example_sync.py
openikeatradfri/: __init__.py  __main__.py  coap_cli.py  device.py  error.py  group.py  mood.py
opentradfri/: __init__.py  __main__.py  coap_cli.py  const.py  device.py  error.py  gateway.py
pytradfri/: __init__.py  __main__.py  aiocoap_api.py  api.py  coap_cli.py  color.py  command.py  const.py  device.py  error.py  gateway.py  group.py  kelvin.py  libcoap_api.py  mood.py  parser.py  resource.py  smart_task.py  socket.py  type_hint.py  types.py  typing.py  util.py
script/: aiotry.py  bootstrap  dev_docker  install-aiocoap.sh  install-coap-client.sh  run-pre-commit.sh  setup
tests/: __init__.py  bulbs.py  common.py  conftest.py  devices.py  moods.py  test_air_purifiers.py  test_api.py  test_blind.py  test_blinds.py  test_color.py  test_command.py  test_device.py  test_gateway.py  (+8 more)
(+28 files in other folders)
