[metadata]
description-file = README.md

[tool:pytest]
testpaths = tests

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build,setup.py
doctests = True
# To work with Black
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
# E402 import at top (for examples)
ignore =
    E501,
    W503,
    E203,
    D202,
    W504,
    E402
